# rustychain

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml  rust-lint.yml  rust-tests.yml
src/: block.rs  chain.rs  lib.rs  message.rs  node.rs
tests/: block.rs  chain.rs  node.rs  test.rs
