[package]
name = "rustychain"
version = "1.0.0"
edition = "2021"
authors = ["Burkov Egor <xwooffie@gmail.com>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"


[dependencies]
serde = {version = "1.0.157", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.24"
rand = "0.8.5"
sha2 = "0.10.6"
hex = "0.4.3"
clap = {version= "4.1.10", features = ["derive"]}
async-channel = "1.8.0"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.4.0"
futures = "0.3.27"
libp2p = { version="0.51.1",  features = ["async-std", "dns", "gossipsub", "mdns", "mplex", "noise", "macros", "tcp", "websocket", "yamux"] }
tokio = { version = "1.13.0", features = ["full"] }
